<resources>
    <string name="app_name">大象册</string>
    <string name="blank">""</string>
    <string name="join_ablum">加入相册</string>
    <string name="input_password">输入密码</string>
    <string name="please_input_password">请输入相册密码</string>
    <string name="new_ablum">新建相册</string>
    <string name="album_name">相册名称</string>
    <string name="album_description">相册描述</string>
    <string name="private_album">私密相册</string>
    <string name="allow_member_upload_file">允许成员上传照片</string>
    <string name="senior_management">高级管理</string>
    <string name="album_password">相册密码</string>
    <string name="comment_file">照片评论</string>
    <string name="like_file">照片点赞</string>
    <string name="like_file_off">该相册的点赞功能已关闭</string>
    <string name="member_upload_file">成员上传照片</string>
    <string name="allow_join_album">允许加入相册</string>
    <string name="complete">完成</string>
    <string name="save">保存</string>
    <string name="permission_set">权限设置</string>
    <string name="private_album_discription">私密相册不会出现在附近相册和搜索结果</string>
    <string name="access_control">权限设置</string>
    <string name="push_notification_discription">打开推送通知,有新照片 新评论 回复和点赞时你都会收到通知</string>
    <string name="join_create_album">加入/新建相册</string>
    <string name="shoud_join_first">请先加入相册</string>
    <string name="upload_file">上传照片/视频 </string>
    <string name="uploading">此文件上传中，稍后操作</string>
    <string name="isuploading">文件上传中...</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="upload">上传</string>
    <string name="preview">预览</string>
    <string name="tenK">万</string>
    <string name="selecte_album_sort">选择相册排序方式</string>
    <string name="no_new_member">暂时没有新成员</string>
    <string name="selecte_file_sort">选择照片/视频的排序方式</string>
    <string name="input_album_name">请输入相册名称</string>
    <string name="input_invite_code">输入相册邀请码</string>
    <string name="scan_code">二维码加入</string>
    <string name="scan_album_code">扫描相册二维码</string>
    <string name="user_icon">头像</string>
    <string name="user_name">名字</string>
    <string name="service_and_feedback">客服与反馈</string>
    <string name="recommended_apps">应用推荐</string>
    <string name="bullet">弹幕</string>
    <string name="clear_cache">清空缓存</string>
    <string name="cache_size"> %1$sMB</string>
    <string name="about_us">关于我们</string>
    <string name="liked_user">赞过的用户</string>
    <string name="logout">登出帐户</string>
    <string name="click_login">点击登录</string>
    <string name="confirm_logout">你确认要登出帐户吗？</string>
    <string name="confirm_clear">你确定要清除所有的通知吗？</string>
    <string name="confime_delete">确认删除照片/视频</string>
    <string name="profile">我</string>
    <string name="invite_friend">邀请成员</string>
    <string name="invitation_code">邀请码</string>
    <string name="copy">复制</string>
    <string name="copy_invitation_code">复制邀请码</string>
    <string name="copy_invitation_code_success">邀请码已复制到剪贴板！</string>
    <string name="album_qr_code">显示相册二维码</string>
    <string name="invite_wechat_friend">邀请微信好友 </string>
    <string name="invite_album_to_weixin_title">邀请加入相册《%1$s》</string>
    <string name="invite_album_to_weixin_summary">点击后就可以直接上传你的照片到我的相册啦</string>
    <string name="invite_via_sms">通过短信邀请</string>
    <string name="notification_center">通知中心</string>
    <string name="clear">清空</string>
    <string name="comments_sort">按评论的数量</string>
    <string name="like_sort">按被赞的数量</string>
    <string name="timeline_sort">时间轴排序</string>
    <string name="share_qr_code">请分享QR代码</string>
    <string name="share_qr_code_description">你的好友扫描该qr代码后，可以加入此群相册</string>
    <string name="save_qr_code">存储QR</string>
    <string name="loading">正在加载</string>
    <string name="longining">正在登录</string>
    <string name="load_album_cover">正在加载相册封面</string>
    <string name="logining">正在登录</string>
    <string name="login_failed">登录失败</string>
    <string name="unbind_success">解绑成功</string>
    <string name="bind_success">绑定成功</string>
    <string name="bind_failed">绑定失败，未知错误</string>
    <string name="unbind_failed">绑定失败，未知错误</string>
    <string name="bind_conflict">绑定失败，平台账号已注册或绑定</string>
    <string name="bind_conflict_qq">绑定失败，你当前登录的QQ帐号已绑定/注册，请先在QQ 中更换帐号。</string>
    <string name="bind_conflict_weibo">绑定失败，你当前登录的微博帐号已绑定/注册，请先在微博APP中更换帐号。</string>
    <string name="bind_conflict_wecat">绑定失败，你当前登录的微信帐号已绑定/注册，请先在微信中更换帐号。</string>
    <string name="mobile_conflict">发送失败，请更换手机号</string>
    <string name="mobile_not_found">发送失败，手机号尚未注册</string>
    <string name="login_failed_user_invalid">登录失败,请检查用户名，密码</string>
    <string name="fail_to_get_token_from_x">获取%1$s登录信息失败</string>
    <string name="fail_to_get_access_token_from_x">获取%1$s账户信息失败</string>
    <string name="total_x_photo">共: %1$s 张图</string>
    <string name="fb_app_id">587438981341968</string>
    <string name="album">相册</string>
    <string name="choose_photo">选择相片</string>
    <string name="choose_qrcode">选择二维码</string>
    <string name="original_photo">原图(%1$s)</string>
    <string name="original_image">原图</string>
    <string name="file_size">大小 (%1$s)</string>
    <string name="album_has_been_delete">此相册已经被删除</string>
    <string name="you_haven_quite">你被管理员从相册中移除</string>
    <string name="join_album_failed">加入相册失败</string>
    <string name="join_album_successed">加入相册成功</string>
    <string name="error_password">密码错误，加入相册失败</string>
    <string name="can_not_allow_join">相册不允许成员加入</string>
    <string name="album_locked">相册拥有者不允许加入</string>
    <string name="user_blocked">您已加入此相册黑名单，无法加入</string>
    <string name="invalid_invitation_code">无效的邀请码</string>
    <string name="album_not_found">相册未能找到</string>
    <string name="album_members">相册成员</string>
    <string name="tab_members">成员</string>
    <string name="second">秒</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string name="day">天</string>
    <string name="ago">前</string>
    <string name="just_now">刚刚</string>
    <string name="scan">扫描</string>
    <string name="scan_qr_join_album">点击二维码保存至本地相册</string>
    <string name="scan_album_qr_join_album">扫描相册二维码，加入相册</string>
    <string name="edit_name">Modify name</string>
    <string name="input_name">请输入名字</string>
    <string name="detail">详情</string>
    <string name="add_comment">发表评论</string>
    <string name="coles_commtent">评论已关闭</string>
    <string name="send">发送</string>
    <string name="x_upload">%1$s 上传</string>
    <string name="more_x_someone_liked"><Data><![CDATA[等<b><font color="#65b3eb" size="25">%1$s</font></b>人赞过]]></Data></string>
    <string name="be_the_first"><Data><![CDATA[<b><font color="#909090" size="25">成为第一个点赞的人吧!</font></b>]]></Data></string>
    <string name="members_count"><Data><![CDATA[<b><font color="#909090" size="25">%1$s位成员</font></b>]]></Data></string>
    <string name="match_count"><Data><![CDATA[<b><font color="#909090" size="25">你有%1$s个好友正在使用大象册</font></b>]]></Data></string>
    <string name="no_match_count"><Data><![CDATA[<b><font color="#909090" size="25">你有%1s个好友正在等待邀请</font></b>]]></Data></string>
    <string name="delete_succeed">删除成功</string>
    <string name="delete_album_succeed">删除相册成功</string>
    <string name="quite_album_succeed">退出相册成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="share_to">分享到</string>
    <string name="share_album_to">分享相册到</string>
    <string name="share_link">复制链接</string>
    <string name="weixin">微信</string>
    <string name="weixin_friend">微信好友</string>
    <string name="weixin_friends">微信朋友圈</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="qq_space">QQ 空间</string>
    <string name="qq">QQ</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="google_plus">google plus</string>
    <string name="instagram">instagram</string>
    <string name="x_havent_been_downloaded">%1$s没有还下载完成</string>
    <string name="resource_error">资源错误</string>
    <string name="image">图片</string>
    <string name="video">视频</string>
    <string name="delete">删除</string>
    <string name="delete_album">删除相册</string>
    <string name="quit_album"> 退出相册</string>
    <string name="report_album">举报相册</string>
    <string name="reply">回复</string>
    <string name="modify_album_settings">更改相册设置</string>
    <string name="modify_album_settings_succeed">更改相册设置成功</string>
    <string name="transfer_owner">转让相册</string>
    <string name="appoint_new_owner">指定新的相册拥有者</string>
    <string name="check_avatar">查看大头像</string>
    <string name="modify">修改</string>
    <string name="pls_input_album_invite_code">请输入相册邀请码</string>
    <string name="detail_info">详细资料</string>
    <string name="no_image_or_video">\n没有任何照片和视频</string>
    <string name="album_x_been_deleted_by_x">删除了相册《%1$s》</string>
    <string name="album_x_been_shared">分享了你的相册《%1$s》</string>
    <string name="comment_x"><b>评论</b>:\"%1$s\"</string>
    <string name="x_comment_x">%1$s<b>评论</b>:\"%2$s\"</string>
    <string name="replay_x"><b>回复</b>:\"%1$s\"</string>
    <string name="x_replay_x">%1$s <b>回复</b>:\"%2$s\"</string>
    <string name="x_uploaded_x_x_to_album_x">%1$s添加了%2$s个%3$s到相册%4$s</string>
    <string name="x_liked_your_x"><b>%1$s</b>赞了你的%2$s</string>
    <string name="x_liked_x"><b>%1$s</b>赞了%2$s</string>
    <string name="x_liked"><b>%1$s</b>赞了</string>
    <string name="image_been_deleted">相册拥有者删除了你的照片！</string>
    <string name="video_been_deleted">相册拥有者删除了你的视频！</string>
    <string name="photo_been_shared">分享了你的照片！</string>
    <string name="photo_been_downloaded">下载了你的照片！</string>
    <string name="video_been_shared">分享了你的视频！</string>
    <string name="video_been_downloaded">下载了你的视频！</string>
    <string name="failed_to_fet_file_info">此文件不存在</string>
    <string name="no_notification">\n\n没有任何消息</string>
    <string name="feedback_info">请你在微信中查找大象册官方公众号 “daxiangce” 来提交你的意见或建议，谢谢。</string>
    <string name="close">关闭</string>
    <string name="open">打开</string>
    <string name="company">上海揆英网络科技有限公司 版权所有</string>
    <string name="copyright"><Data><![CDATA[Coypright ©2011-2014 Yunio.,All Rights Reserved.]]></Data></string>
    <string name="version_x">版本号:%1$s</string>
    <string name="video_play">视频播放</string>
    <string name="video_play_completed">播放完成</string>
    <string name="file_does_not_exists">文件不存在</string>
    <string name="immediately_upload">立即上传</string>
    <string name="shoot">立即拍摄</string>
    <string name="local_photo">本地照片</string>
    <string name="select_all">全选</string>
    <string name="album_url_copied_succeed">相册地址已复制成功</string>
    <string name="photo_url_copied_succeed">图片地址已复制成功</string>
    <string name="video_url_copied_succeed">视频地址已复制成功</string>
    <string name="url_copied_succeed">链接地址已复制成功</string>
    <string name="havet_select_file">没有选中任何文件</string>
    <string name="havet_input">没有输入</string>
    <string name="name_exists">名字已经存在</string>
    <string name="album_exists">相册已经存在</string>
    <string name="album_name_empty">相册名称为1到50个字符，允许汉字、数字、英文、特殊字符等，支持全角、半角字符和Emoji</string>
    <string name="agreement">用户协议</string>
    <string name="privacy">隐私条款</string>
    <string name="pwd_lock">密码锁定</string>
    <string name="passcode_change_passcode">更改密码</string>
    <string name="passcode_turn_on">打开密码</string>
    <string name="input_10th_error_pwd_login_again">10次密码输入错误后，你需要重新登录账号。</string>
    <string name="binding">绑定</string>
    <string name="input_phone_number">1 输入手机号码</string>
    <string name="submit_verification_code">2 提交验证码</string>
    <string name="set_password">3 设置密码</string>
    <string name="pls_input_password">请输入密码</string>
    <string name="pls_input_password_again">重复密码</string>
    <string name="pls_input_name">请填写昵称，不填则默认昵称为手机号</string>
    <string name="password_limit">密码长度为8-30个字符，允许数字、字母、特殊符号</string>
    <string name="submit">提交</string>
    <string name="phone_number">手机号</string>
    <string name="wechat">微信</string>
    <string name="account_password">帐号密码</string>
</resources>