<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_verify_phone_number_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/user_guide_bg" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="@dimen/title_bar_height"
            android:layout_centerVertical="true"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            android:src="@drawable/back_white" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/image_detail_pager_margin" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_input_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/input_phone_number"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/regester_margin"
                android:layout_marginRight="@dimen/regester_margin"
                android:gravity="center"
                android:text=">" />

            <TextView
                android:id="@+id/tv_submit_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/submit_verification_code"
                android:textSize="@dimen/text_size_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="@dimen/regester_margin"
                android:layout_marginRight="@dimen/regester_margin"
                android:gravity="center"
                android:text=">" />

            <TextView
                android:id="@+id/tv_set_password"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/set_password"
                android:textColor="#ff0794e1"
                android:textSize="@dimen/text_size_normal" />
        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/layout_divider" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_centerVertical="true"
        android:background="#fffffb"
        android:hint="@string/pls_input_password"
        android:inputType="textPassword"
        android:maxLength="30"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding"
        android:textSize="@dimen/text_size_normal" />

    <include layout="@layout/layout_divider" />

    <EditText
        android:id="@+id/input_password_again"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_centerVertical="true"
        android:background="#fffffb"
        android:hint="@string/pls_input_password_again"
        android:inputType="textPassword"
        android:maxLength="30"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding"
        android:textSize="@dimen/text_size_normal" />

    <include layout="@layout/layout_divider" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_centerVertical="true"
        android:background="#fffffb"
        android:hint="@string/pls_input_name"
        android:maxLength="25"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding"
        android:textSize="@dimen/text_size_normal" />

    <include layout="@layout/layout_divider" />

    <TextView
        android:id="@+id/get_verification_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/password_limit"
        android:textSize="@dimen/text_size_normal" />

    <TextView
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/clickalbe_get_verification_code_grey_white_stroke"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@color/clickable_blue_grey"
        android:textSize="@dimen/text_size_normal" />

</LinearLayout>