<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- title -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height">

        <ImageView
            android:id="@+id/iv_about_us_back"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="@dimen/title_bar_height"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            android:src="@drawable/back_bg" />

        <TextView
            android:id="@+id/tv_title_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_us"
            android:textSize="@dimen/text_size_title" />
    </RelativeLayout>

    <include layout="@layout/layout_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <!-- logo -->

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/blank"
            android:scaleType="center"
            android:src="@drawable/about_us_logo_cn" />

        <!-- versions -->

        <TextView
            android:id="@+id/tv_versions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/preference_margin_rl"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

    <!-- bottom info -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/preference_margin_rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- privacy-->

            <TextView
                android:id="@+id/agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/agreement"
                android:textColor="@color/clickable_grey"
                android:textSize="@dimen/text_size_small" />
            <!-- privacy -->

            <TextView
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/privacy"
                android:textColor="@color/clickable_grey"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <!-- copyright CHN -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/company"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_small" />
        <!-- copyright ENG -->

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_size_small"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>